# ai-combine

./: .env.example  .gitignore  README.md  README.ru.md  SECURITY.md  docker-compose.yml  litellm_config.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docker/: broker.Dockerfile  docs.Dockerfile  indexer.Dockerfile  orchestrator.Dockerfile  sandbox.Dockerfile  telegram.Dockerfile  worker.Dockerfile
docs/: agents.md  agents.ru.md  architecture.md  architecture.ru.md  index.md  quickstart.md  quickstart.ru.md  security.md
searxng/: settings.yml
src/chronicle_worker/: __init__.py  main.py  notes.py
src/deck_worker/: __init__.py  client.py  main.py
src/docs_search/: __init__.py  chunker.py  convert.py  embedder.py  index.py  store.py
src/orchestrator/: __init__.py  config.py  main.py  metrics.py  persistence.py
src/orchestrator/agents/: __init__.py  assistant.py  base.py  coder.py  ded.py  history.py  kolobok.py  koschei.py  levsha.py  planner.py  recon.py  registry.py
src/orchestrator/api/: dashboard.py  routes.py  schemas.py
src/orchestrator/prompts/: assistant.md  coder.md  ded.md  kolobok.md  koschei.md  levsha.md  planner.md  recon.md
src/orchestrator/rag/: __init__.py  embedder.py  store.py
src/orchestrator/tools/: __init__.py  common.py  deck.py  docs.py  github.py  guard.py  memory.py  rag.py  shell.py  web_search.py
src/rag_indexer/: __init__.py  base.py  chunker.py  main.py
src/rag_indexer/sources/: __init__.py  notes.py  webdav.py
src/research_worker/: __init__.py  main.py
src/sandbox_broker/: __init__.py  main.py
src/telegram_bot/: __init__.py  handlers.py  main.py  middleware.py  orchestrator_client.py
tests/: conftest.py  test_auth.py  test_broker.py  test_chronicle.py  test_dashboard.py  test_deck.py  test_docs_search.py  test_github.py  test_guard.py  test_health.py  test_history.py  test_persistence.py  test_planner.py  test_research.py  test_stage2.py  test_stage3.py  test_stage5.py  test_stage6.py
