[project]
name = "ai-combine"
version = "0.1.0"
description = "Личный мульти-агентный комбайн на базе китайских LLM с локальной инфраструктурой"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Оркестрация агентов ---
    "pydantic-ai-slim[openai]>=0.0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # --- Web / API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    # --- Sandbox (Этап 6): порождение изолированных контейнеров ---
    "docker>=7.1",
    # --- Логи ---
    "structlog>=24.4",
]

[project.optional-dependencies]
telegram = [
    "aiogram>=3.13",
]
rag = [
    "qdrant-client>=1.12",
    "webdav4>=0.10",
    "tiktoken>=0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
