[project]
name = "ai-combine"
version = "0.1.0"
description = "Self-hosted multi-agent combine: SecOps/Coder/General/Planner agents on cheap LLMs"
readme = "README.md"
license = "MIT"
authors = [{ name = "Filipp Panchuk (Gyxer)" }]
requires-python = ">=3.11"
dependencies = [
    # --- Agent orchestration ---
    "pydantic-ai-slim[openai]>=0.0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # --- Web / API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    # --- Sandbox (Stage 6): spawning isolated containers ---
    "docker>=7.1",
    # --- Logging ---
    "structlog>=24.4",
]

[project.optional-dependencies]
telegram = [
    "aiogram>=3.13",
]
rag = [
    "qdrant-client>=1.12",
    "webdav4>=0.10",
    "tiktoken>=0.8",
]
# Local semantic search over the combine's own Markdown docs.
# EmbeddingGemma-300m (int8) via ONNX Runtime + FAISS, no torch — light and offline.
docs = [
    "onnxruntime>=1.19",
    "faiss-cpu>=1.9",
    "tokenizers>=0.20",
    "huggingface-hub>=0.26",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# dashboard.py contains an inline HTML/JS template with long lines.
"src/orchestrator/api/dashboard.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
